Fixes #320: Manage Rule Page -- Table Header is cutoff in IE10. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@287 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/jmesa/jmesa.css
+++ b/web/src/main/webapp/includes/jmesa/jmesa.css
@@ -306,4 +306,6 @@
 	color: #789EC5; 
 	}
 
-
+.jmesa .table .header td div {
+	display: inline-table;
+}
